# lumen

./: LICENSE  README.md  build_deck.py  lumen-site.html  lumen_pitch.pptx  make_demo_svg.py  make_poster_svg.py  make_webtour_svg.py  pyproject.toml
docs/: index.html
docs/app/: index.html
lumen/: __init__.py  __main__.py  agent.py  airgap.py  cli.py  config.py  diffing.py  persistence.py  prompts.py  security.py  session.py  toolcall_parse.py
lumen/providers/: __init__.py  base.py  openai_compat.py
lumen/tools/: __init__.py  base.py  fs.py  registry.py  search.py  shell.py
lumen/ui/: __init__.py  console.py
scripts/: make_cli_offline_svg.py  make_demo_svg.py  make_poster_svg.py  measure_context.py
