[project]
name = "lumen-code"
version = "0.1.0"
description = "Lumen — a privacy-first coding harness. Run local LLMs offline, or bring your own OpenRouter key for the full catalogue. Your code never leaves your machine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Lumen" }]
keywords = ["llm", "coding-agent", "ollama", "openrouter", "local-llm", "cli", "privacy"]
dependencies = [
    "httpx>=0.27",
    "rich>=13.7",
    "prompt_toolkit>=3.0",
]

# Tooling used only for the measurement script and the pitch/demo generators
# (scripts/), not needed to run Lumen itself.
[project.optional-dependencies]
dev = [
    "tiktoken>=0.7",      # scripts/measure_context.py — exact token counts
    "python-pptx>=0.6",   # scripts/build_deck.py — pitch deck
]

[project.scripts]
lumen = "lumen.cli:main"

[project.urls]
Homepage = "https://github.com/jaydip-meesho/lumen"
Repository = "https://github.com/jaydip-meesho/lumen"
Issues = "https://github.com/jaydip-meesho/lumen/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lumen"]
